--- a/tth-client/src/app/main-page/main-page.component.html
+++ b/tth-client/src/app/main-page/main-page.component.html
@@ -1,13 +1,56 @@
 <div class="parallaxPhilosophy"></div>
+
+<div class="parallaxCurrent">
+  <div class="caption">
+    <span class="border">AKTUELLES</span>
+    <p class="description">
+      Ab dem 1.12.2016 ist der Eingangsbereich der Ballett-und Tanzschule Ludwigsburg ” Tanztheater Anita Hanke”  Liebigstraße 11 gesperrt. Bitte benutzen Sie den Eingang durch die Tiefgarage des Hornbach. Parkplätze sind reichlich vorhanden. Der Treppenaufgang von der Parkgarage führt direkt in die Tanzschule im 1. Stock.Vielen Dank.
+    </p>
+  </div>
+</div>
+
+<div class="parallaxCourses">
+  <div class="caption">
+    <span class="border">KURSE</span>
+    <p class="description">
+      Das Kursangebot der Tanztheater in Ludwigsburg und Markgröningen umfasst Ballett, Modern, Jazz Dance, Musical, Breakdance und Hip Hop. Im Rahmen unserer Kulturveranstaltungen präsentieren wir Kindermusicals (Teilnahme ab 6 Jahren), Jugendprojekte und Choreographenabende sowie kleine Shows für kulturelle Veranstaltungen.
+    </p>
+  </div>
+</div>
+
 <div class="parallaxStage">
   <div class="caption">
     <span class="border">BÜHNE</span>
-    <p class="description">1990 entstand das Tanztheater Anita Hanke in Markgröningen. Nach ersten Erfolgen mit Inszenierungen für Kinder, Jugendliche und Erwachsene wurden neue, größere Räume für den Unterricht und die Proben bezogen. Nach der Inszenierung “Der kleine Tag” und den Choreographenabenden “Art of Dance” und “Zeit” veranstalteten wir regelmäßig  Tanztheaterproduktionen. Inzwischen bieten wir über 50 Kurse an für Tänzerinnen und Tänzer von 3-65 Jahren. Diese Trailer zeigen Ausschnitte aus unseren letzten Bühnenproduktionen 2014 Scala Ludwigsburg “Cinemoves-als die Bilder laufen lernten”</p>
+    <p class="description">
+      1990 entstand das Tanztheater Anita Hanke in Markgröningen. Nach ersten Erfolgen mit Inszenierungen für Kinder, Jugendliche und Erwachsene wurden neue, größere Räume für den Unterricht und die Proben bezogen. Nach der Inszenierung “Der kleine Tag” und den Choreographenabenden “Art of Dance” und “Zeit” veranstalteten wir regelmäßig  Tanztheaterproduktionen. Inzwischen bieten wir über 50 Kurse an für Tänzerinnen und Tänzer von 3-65 Jahren. Diese Trailer zeigen Ausschnitte aus unseren letzten Bühnenproduktionen 2014 Scala Ludwigsburg “Cinemoves-als die Bilder laufen lernten”
+    </p>
   </div>
 </div>
+
 <div class="parallaxTeam">
   <div class="caption">
     <span class="border">TEAM</span>
-    <p class="description">1990 entstand das Tanztheater Anita Hanke in Markgröningen. Nach ersten Erfolgen mit Inszenierungen für Kinder, Jugendliche und Erwachsene wurden neue, größere Räume für den Unterricht und die Proben bezogen. Nach der Inszenierung “Der kleine Tag” und den Choreographenabenden “Art of Dance” und “Zeit” veranstalteten wir regelmäßig  Tanztheaterproduktionen. Inzwischen bieten wir über 50 Kurse an für Tänzerinnen und Tänzer von 3-65 Jahren. Diese Trailer zeigen Ausschnitte aus unseren letzten Bühnenproduktionen 2014 Scala Ludwigsburg “Cinemoves-als die Bilder laufen lernten”</p>
+    <p class="description">
+      1990 entstand das Tanztheater Anita Hanke in Markgröningen. Nach ersten Erfolgen mit Inszenierungen für Kinder, Jugendliche und Erwachsene wurden neue, größere Räume für den Unterricht und die Proben bezogen. Nach der Inszenierung “Der kleine Tag” und den Choreographenabenden “Art of Dance” und “Zeit” veranstalteten wir regelmäßig  Tanztheaterproduktionen. Inzwischen bieten wir über 50 Kurse an für Tänzerinnen und Tänzer von 3-65 Jahren. Diese Trailer zeigen Ausschnitte aus unseren letzten Bühnenproduktionen 2014 Scala Ludwigsburg “Cinemoves-als die Bilder laufen lernten”. 
+    </p>
+  </div>
+</div>
+
+<div class="parallaxLocations">
+  <div class="caption">
+    <span class="border">STANDORTE</span>
+    <p class="description">
+      Tanzschule Markgröningen  |  Maulbronner Weg 37  |  71706 Markgröningen  |  07141 4873482
+      Tanzschule Ludwigsburg  |  Liebigstraße 11  |  71636 Ludwigsburg  |  07141 4873482
+    </p>
+  </div>
+</div>
+
+<div class="parallaxContact">
+  <div class="caption">
+    <span class="border">KONTAKT</span>
+    <p class="description">
+      Wir freuen uns über Begegnungen mit tanzbegeisterten Menschen, die zum Probetraining vorbeischauen oder sich von unseren Auftritten bezaubern lassen.
+    </p>
   </div>
 </div>
