--- a/tth-client/src/styles.scss
+++ b/tth-client/src/styles.scss
@@ -3,6 +3,6 @@ body, html {
     height: 100%;
     width: 100%;
     margin: 0;
-    font: 400 15px/1.8 "Lato", sans-serif;
+    font: 400 15px/1.8 "Lucida Grande", sans-serif;
     color: #777;
 }
