:lipstick: Change pictures of main page

--- a/tth-client/src/app/main-page/main-page.component.scss
+++ b/tth-client/src/app/main-page/main-page.component.scss
@@ -23,7 +23,7 @@ div {
 }
 
 .parallaxCourses {
-    background-image: url("../../resources/DSC_8806.jpg");
+    background-image: url("../../resources/Kurse.jpg");
 }
 
 .parallaxStage {
@@ -40,7 +40,7 @@ div {
 }
 
 .parallaxContact {
-    background-image: url("../../resources/AURORA4.jpg");
+    background-image: url("../../resources/Kontakt.jpg");
 }
 
 .caption {
