--- a/tth-client/src/app/shared/header/header.component.scss
+++ b/tth-client/src/app/shared/header/header.component.scss
@@ -2,7 +2,7 @@
 .navbar {
     overflow: hidden;
     background-color: #303030;
-    position: fixed; /* Set the navbar to fixed position */
+    // position: fixed; /* Set the navbar to fixed position */
     top: 0; /* Position the navbar at the top of the page */
     width: 100%; /* Full width */
     z-index: 10;
