--- a/tth-client/src/styles.scss
+++ b/tth-client/src/styles.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 /* You can add global styles to this file, and also import other style files */
 body, html {
     height: 100%;
