:art: rename cssClasses

--- a/tth-client/src/app/main-page/main-page.component.html
+++ b/tth-client/src/app/main-page/main-page.component.html
@@ -1,7 +1,7 @@
 <div *ngFor="let site of sites" class={{site.cssClass}}>
   <div class="container">
-    <div class="caption">
-      <span class="border">{{site.title}}</span>
+    <div class="content">
+      <span class="caption">{{site.title}}</span>
       <p class="description">
         {{site.description}}
       </p>
