--- a/tth-client/src/app/main-page/main-page.component.scss
+++ b/tth-client/src/app/main-page/main-page.component.scss
@@ -67,6 +67,7 @@ div {
             font-size: 30px;
             letter-spacing: 10px;
             margin: 20px;
+            text-transform: uppercase;
         }
     
         .description {
