:art: Introduce additional class for parallax

--- a/tth-client/src/app/main-page/main-page.component.html
+++ b/tth-client/src/app/main-page/main-page.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let site of sites" class={{site.cssClass}}>
+<div *ngFor="let site of sites" class="{{site.cssClass}} parallaxSection">
   <div class="container">
     <div class="content">
       <span class="caption">{{site.title}}</span>
