--- a/tth-client/src/app/shared/header/header.component.scss
+++ b/tth-client/src/app/shared/header/header.component.scss
@@ -1,3 +1,5 @@
+@import '../../../variables';
+
 /* The navigation bar */
 .navbar {
     overflow: hidden;
@@ -22,7 +24,7 @@
     a {
         float: right;
         display: block;
-        color: #f2f2f2;
+        color: $header-link-color;
         text-align: center;
         padding: 14px 20px;
         text-decoration: none;
@@ -31,6 +33,6 @@
     }
 
     a:hover {
-        background-color: #595959;
+        background-color: $header-hover-background-color;
     }
 }
