:sparkles: Introduce team site
Anita's picture used for every team member

--- a/tth-client/src/app/shared/header/header.component.html
+++ b/tth-client/src/app/shared/header/header.component.html
@@ -2,7 +2,7 @@
     <div routerLink="/" class="logo"></div>
     <a href="#contact">Kontakt</a>
     <a href="#locations">Standorte</a>
-    <a href="#team">Team</a>
+    <a routerLink="/team">Team</a>
     <a href="#courses">Kurse</a>
     <a href="#stage">Bühne</a>
     <a routerLink="/aktuelles">Aktuelles</a>
