--- a/tth-client/src/variables.scss
+++ b/tth-client/src/variables.scss
@@ -1,3 +1,7 @@
 $header-link-color: #f2f2f2;
 $header-hover-background-color: #595959;
 $main-text-color: #F6F5F5;
+
+$breakpoint-tablet: 800px;
+$breakpoint-laptop: 1200px;
+$breakpoint-desktop: 1600px;
