:art: Use standardized bootstrap breakpoints

--- a/tth-client/src/app/sites/team/team.component.scss
+++ b/tth-client/src/app/sites/team/team.component.scss
@@ -42,7 +42,7 @@
     }
 }
 
-@media (min-width: $breakpoint-tablet){
+@media (min-width: $media-breakpoint-md){
     .team-member-content-container {
         display: flex;
     
