:art: SCSS cleanup

--- a/tth-client/src/app/sites/current/current.component.html
+++ b/tth-client/src/app/sites/current/current.component.html
@@ -1,4 +1,4 @@
-<div class="headPicture"></div>
+<div class="header-image"></div>
 <div class="content">
   <div *ngFor="let post of posts" class="posts">
     <h2>{{post.title}}</h2>
