--- a/tth-client/src/app/sites/team/team.component.scss
+++ b/tth-client/src/app/sites/team/team.component.scss
@@ -1,16 +1,7 @@
 @import '../../../variables';
 
-.headPicture {
+.header-image {
     background-image: url("../../../resources/Team.jpg");
-    width: 100%;
-    height: 500px;
-    position: relative;
-    opacity: 0.8;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    // min-height: 100%;
 }
 
 .team-member-content {
