:art: Use SCSS variable for horizontal rule color

--- a/tth-client/src/app/sites/team/team.component.scss
+++ b/tth-client/src/app/sites/team/team.component.scss
@@ -14,7 +14,7 @@
         opacity: 0.85;
         padding: 30px 0 70px;
         margin: 0 70px;
-        border-bottom: 2px solid #303030;
+        border-bottom: 1px solid $post-seperator-color;
     }
 }
 
