--- a/tth-client/src/variables.scss
+++ b/tth-client/src/variables.scss
@@ -1,6 +1,11 @@
+/*-----------
+|   COLORS  |
+------------*/
+
 $header-link-color: #f2f2f2;
 $header-hover-background-color: #595959;
 $main-text-color: #F6F5F5;
+$post-seperator-color: #8C8C8C;
 
 /*---------------------------
 |   RESPONSIVE BREAKPOINTS  |
