--- a/tth-client/src/app/shared/header/header.component.html
+++ b/tth-client/src/app/shared/header/header.component.html
@@ -3,7 +3,7 @@
     <a href="#contact">Kontakt</a>
     <a href="#locations">Standorte</a>
     <a routerLink="/team">Team</a>
-    <a href="#courses">Kurse</a>
+    <a routerLink="/kurse">Kurse</a>
     <a href="#stage">Bühne</a>
     <a routerLink="/aktuelles">Aktuelles</a>
   </div>
