:sparkles: Create first structure of stage component

--- a/tth-client/src/app/shared/header/header.component.html
+++ b/tth-client/src/app/shared/header/header.component.html
@@ -4,6 +4,6 @@
     <a href="#locations">Standorte</a>
     <a routerLink="/team">Team</a>
     <a routerLink="/kurse">Kurse</a>
-    <a href="#stage">Bühne</a>
+    <a routerLink="/buehne">Bühne</a>
     <a routerLink="/aktuelles">Aktuelles</a>
   </div>
