--- a/tth-client/src/app/sites/stage/stage.component.scss
+++ b/tth-client/src/app/sites/stage/stage.component.scss
@@ -5,7 +5,7 @@
     background-image: url("../../../resources/DSC_9425.jpg");
 }
 
-.content {
+.stage-content {
     background-color: $main-text-color;
     padding: 10px;
 
@@ -31,6 +31,13 @@
         width: 70%;
         height: auto;
         display: block;
+        border: solid black 3px;
+        -webkit-transition-duration: 0.4s; /* Safari */
+        transition-duration: 0.4s;
+    }
+    .team-member-picture-frame:hover {
+        box-shadow: 0 5px 6px 0 rgba(0,0,0,0.29), 9px 12px 50px 0 rgba(0,0,0,0.24);
+        cursor: pointer;
     }
 }
 
