--- a/tth-client/src/app/sites/current/current.component.scss
+++ b/tth-client/src/app/sites/current/current.component.scss
@@ -1,4 +1,5 @@
 @import '../../../variables';
+@import '../../../mixins';
 
 .header-image {
     background-image: url("../../../resources/H34A8653.jpg");
@@ -9,10 +10,43 @@
     padding: 10px;
 
     .posts {
-        background-color: #303030;
-        color: #ffffff;
+        // background-color: #303030;
+        color: #303030;
         opacity: 0.85;
-        padding: 20px;
-        margin: 70px;
+        padding: 30px 0 70px;
+        margin: 0 70px;
+        border-bottom: 1px solid $post-seperator-color;
+    }
+}
+
+.team-member-content-container {
+
+    .team-member-description-container {
+        display: block;
+    }
+
+    .team-member-picture-frame {
+        background-size: 100% 100%;
+        margin-right: 20px;
+        width: 70%;
+        height: auto;
+        display: block;
+    }
+}
+
+@media (min-width: $media-breakpoint-md){
+    .team-member-content-container {
+        @include flexbox();
+    
+        .team-member-description-container {
+            @include flex(1);
+        }
+    
+        .team-member-picture-frame {
+            background-size: 100% 100%;
+            height: 500px;
+            width: 350px;
+            margin-right: 20px;
+        }
     }
 }
