--- a/tth-client/src/app/sites/current/current.component.html
+++ b/tth-client/src/app/sites/current/current.component.html
@@ -1,7 +1,10 @@
 <div class="header-image"></div>
 <div class="content">
-  <div *ngFor="let post of posts" class="posts">
-    <h2>{{post.title}}</h2>
-    <p>{{post.text}}</p>
+  <div *ngFor="let post of posts" class="post">
+    <h2 [innerHTML]='post.title'></h2>
+    <div [innerHTML]='post.description'></div>
+    <div *ngFor="let image of post.images" class='post-image-container'>
+      <img src={{getFileSrc(image)}} class='post-image'/>
+    </div>
   </div>
 </div>
