--- a/tth-client/src/app/sites/stage/stage.component.scss
+++ b/tth-client/src/app/sites/stage/stage.component.scss
@@ -1,6 +1,10 @@
 @import '../../../variables';
 @import '../../../mixins';
 
+* {
+    box-sizing: border-box;
+}
+
 .header-image {
     background-image: url("../../../resources/DSC_9425.jpg");
 }
@@ -32,11 +36,11 @@
         height: auto;
         display: block;
         border: solid black 3px;
-        -webkit-transition-duration: 0.4s; /* Safari */
-        transition-duration: 0.4s;
+        -webkit-transition-duration: 0.3s; /* Safari */
+        transition-duration: 0.3s;
     }
     .team-member-picture-frame:hover {
-        box-shadow: 0 5px 6px 0 rgba(0,0,0,0.29), 9px 12px 50px 0 rgba(0,0,0,0.24);
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 25px 0 rgba(0, 0, 0, 0.3);
         cursor: pointer;
     }
 }
@@ -55,5 +59,113 @@
             width: 350px;
             margin-right: 20px;
         }
+    }
+}
+
+  
+/* The Modal (background) */
+.modal-dialog-background {
+    display: block;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: black;
+
+    /* Modal Content */
+    .modal-dialog-content-container {
+        position: relative;
+        background-color: #fefefe;
+        margin: auto;
+        padding: 0;
+        width: 90%;
+        max-width: 1200px;
+
+        .mySlides {
+            display: block;
+            background-color: black;
+
+            img {
+                max-height: 600px;
+                max-width: 1000px;
+                display: block;
+                margin: auto;
+            }
+        }
+    }
+      
+    /* The Close Button */
+    .close-button {
+        color: white;
+        position: absolute;
+        top: 10px;
+        right: 25px;
+        font-size: 35px;
+        font-weight: bold;
+    }
+
+    .close-button:hover,
+    .close-button:focus {
+        color: #999;
+        text-decoration: none;
+        cursor: pointer;
+    }
+
+    /* Next & previous buttons */
+    .prev,
+    .next {
+        cursor: pointer;
+        position: absolute;
+        top: 50%;
+        width: auto;
+        padding: 16px;
+        margin-top: -50px;
+        color: white;
+        font-weight: bold;
+        font-size: 20px;
+        transition: 0.6s ease;
+        border-radius: 0 3px 3px 0;
+        user-select: none;
+        -webkit-user-select: none;
+    }
+    
+    /* Position the "next button" to the right */
+    .next {
+        right: 0;
+        border-radius: 3px 0 0 3px;
+    }
+    
+    /* On hover, add a black background color with a little bit see-through */
+    .prev:hover,
+    .next:hover {
+        background-color: rgba(0, 0, 0, 0.8);
+    }
+    
+    /* Number text (1/3 etc) */
+    .numbertext {
+        color: #f2f2f2;
+        font-size: 12px;
+        padding: 8px 12px;
+        position: absolute;
+        top: 0;
+    }
+
+    .dot {
+        cursor:pointer;
+        height: 13px;
+        width: 13px;
+        margin: 0 2px;
+        background-color: #bbb;
+        border-radius: 50%;
+        display: inline-block;
+        transition: background-color 0.6s ease;
+    }
+    
+    .active, .dot:hover {
+        background-color: #717171;
     }
 }
