:lipstick: :art: refactor scss-class names and structure

--- a/tth-client/src/app/sites/stage/stage.component.html
+++ b/tth-client/src/app/sites/stage/stage.component.html
@@ -1,5 +1,5 @@
 <div class="header-image"></div>
-<div class="stage-content">
+<div class="performances-container">
   <div class="posts">
     <h2>Cinemoves</h2>
     <div class="team-member-content-container">
@@ -38,70 +38,43 @@
   <span class="close-button" (click)="showModalDialog = false">&times;</span>
   <div class="modal-dialog-content-container">
 
-    <div class="mySlides">
-      <div class="numbertext">1 / 6</div>
+    <!-- <div class="performance-picture">
+      <div class="performance-picture-numbertext">1 / 6</div>
       <img src="assets/stage/H34A0833.JPG">
-    </div>
+    </div> -->
 
-    <!-- <div class="mySlides">
-      <div class="numbertext">2 / 6</div>
+    <!-- <div class="performance-picture">
+      <div class="performance-picture-numbertext">2 / 6</div>
       <img src="assets/stage/H34A1365.JPG">
     </div> -->
 
-    <!-- <div class="mySlides">
-      <div class="numbertext">3 / 6</div>
+    <div class="performance-picture">
+      <div class="performance-picture-numbertext">3 / 6</div>
       <img src="assets/stage/H34A1480.JPG">
     </div>
 
-    <div class="mySlides">
-      <div class="numbertext">4 / 6</div>
+    <!-- <div class="performance-picture">
+      <div class="performance-picture-numbertext">4 / 6</div>
       <img src="assets/stage/H34A3398.JPG">
     </div>
 
-    <div class="mySlides">
-      <div class="numbertext">5 / 6</div>
+    <div class="performance-picture">
+      <div class="performance-picture-numbertext">5 / 6</div>
       <img src="assets/stage/H34A3586.jpg">
     </div>
 
-    <div class="mySlides">
-      <div class="numbertext">6 / 6</div>
+    <div class="performance-picture">
+      <div class="performance-picture-numbertext">6 / 6</div>
       <img src="assets/stage/H34A3738.JPG">
     </div> -->
 
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    <a class="prev-arrow-button" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next-arrow-button" onclick="plusSlides(1)">&#10095;</a>
 
-    <!-- <div class="caption-container">
-      <p id="caption">Bilder</p>
-    </div> -->
-    
-    <!-- <div class="column">
-      <img class="demo cursor" src="assets/stage/H34A0833.JPG">
-    </div>
-
-    <div class="column">
-      <img class="demo cursor" src="assets/stage/H34A1365.JPG">
-    </div>
-
-    <div class="column">
-      <img class="demo cursor" src="assets/stage/H34A1480.JPG">
-    </div>
-
-    <div class="column">
-      <img class="demo cursor" src="assets/stage/H34A3398.JPG">
-    </div>
-
-    <div class="column">
-      <img class="demo cursor" src="assets/stage/H34A3586.jpg">
-    </div>
-
-    <div class="column">
-      <img class="demo cursor" src="assets/stage/H34A3738.JPG">
-    <</div> -->
   </div>
   <br>
   
-  <div style="text-align:center">
+  <div class="modal-dialog-dot-navigation">
     <span class="dot" onclick="currentSlide(1)"></span> 
     <span class="dot" onclick="currentSlide(2)"></span> 
     <span class="dot" onclick="currentSlide(3)"></span> 
