--- a/tth-client/src/app/sites/stage/stage.component.scss
+++ b/tth-client/src/app/sites/stage/stage.component.scss
@@ -9,7 +9,7 @@
     background-image: url("../../../resources/DSC_9425.jpg");
 }
 
-.stage-content {
+.performances-container {
     background-color: $main-text-color;
     padding: 10px;
 
@@ -75,29 +75,7 @@
     height: 100%;
     overflow: auto;
     background-color: black;
-
-    /* Modal Content */
-    .modal-dialog-content-container {
-        position: relative;
-        background-color: #fefefe;
-        margin: auto;
-        padding: 0;
-        width: 90%;
-        max-width: 1200px;
-
-        .mySlides {
-            display: block;
-            background-color: black;
-
-            img {
-                max-height: 600px;
-                max-width: 1000px;
-                display: block;
-                margin: auto;
-            }
-        }
-    }
-      
+    
     /* The Close Button */
     .close-button {
         color: white;
@@ -115,9 +93,40 @@
         cursor: pointer;
     }
 
+    /* Modal Content */
+    .modal-dialog-content-container {
+        position: relative;
+        background-color: #fefefe;
+        margin: auto;
+        padding: 0;
+        width: 90%;
+        max-width: 1200px;
+
+        .performance-picture {
+            display: block;
+            background-color: black;
+
+            img {
+                max-height: 600px;
+                max-width: 100%;
+                display: block;
+                margin: auto;
+            }
+        }
+        
+        /* Number text (1/3 etc) */
+        .performance-picture-numbertext {
+            color: #f2f2f2;
+            font-size: 12px;
+            padding: 8px 12px;
+            position: absolute;
+            top: 0;
+        }
+    }
+
     /* Next & previous buttons */
-    .prev,
-    .next {
+    .prev-arrow-button,
+    .next-arrow-button {
         cursor: pointer;
         position: absolute;
         top: 50%;
@@ -134,38 +143,33 @@
     }
     
     /* Position the "next button" to the right */
-    .next {
+    .next-arrow-button {
         right: 0;
         border-radius: 3px 0 0 3px;
     }
     
     /* On hover, add a black background color with a little bit see-through */
-    .prev:hover,
-    .next:hover {
+    .prev-arrow-button:hover,
+    .next-arrow-button:hover {
         background-color: rgba(0, 0, 0, 0.8);
     }
-    
-    /* Number text (1/3 etc) */
-    .numbertext {
-        color: #f2f2f2;
-        font-size: 12px;
-        padding: 8px 12px;
-        position: absolute;
-        top: 0;
-    }
 
-    .dot {
-        cursor:pointer;
-        height: 13px;
-        width: 13px;
-        margin: 0 2px;
-        background-color: #bbb;
-        border-radius: 50%;
-        display: inline-block;
-        transition: background-color 0.6s ease;
-    }
-    
-    .active, .dot:hover {
-        background-color: #717171;
+    .modal-dialog-dot-navigation {
+        text-align: center;
+
+        .dot {
+            cursor: pointer;
+            height: 13px;
+            width: 13px;
+            margin: 0 2px;
+            background-color: #bbb;
+            border-radius: 50%;
+            display: inline-block;
+            transition: background-color 0.6s ease;
+        }
+        
+        .active, .dot:hover {
+            background-color: #717171;
+        }
     }
 }
