--- a/tth-client/src/app/sites/stage/gallery/gallery.component.html
+++ b/tth-client/src/app/sites/stage/gallery/gallery.component.html
@@ -2,45 +2,22 @@
   <span class="close-button" (click)="close()">&times;</span>
   <div class="modal-dialog-content-container">
 
-    <!-- <div class="performance-picture">
-      <div class="performance-picture-numbertext">1 / 6</div>
-      <img src="assets/stage/H34A0833.JPG">
-    </div> -->
-
-    <!-- <div class="performance-picture">
-      <div class="performance-picture-numbertext">2 / 6</div>
-      <img src="assets/stage/H34A1365.JPG">
-    </div> -->
-
-    <div class="performance-picture">
-      <div class="performance-picture-numbertext">3 / 6</div>
-      <img src="assets/stage/H34A1480.JPG">
+    <div *ngFor="let picture of pictures">
+      <div class="performance-picture-frame" *ngIf="picture.isVisible">
+        <div class="performance-picture-numbertext">{{pictures.indexOf(picture)+1}} / {{pictures.length}}</div>
+        <img src={{picture.source}}>
+      </div>
     </div>
 
-    <!-- <div class="performance-picture">
-      <div class="performance-picture-numbertext">4 / 6</div>
-      <img src="assets/stage/H34A3398.JPG">
-    </div>
-
-    <div class="performance-picture">
-      <div class="performance-picture-numbertext">5 / 6</div>
-      <img src="assets/stage/H34A3586.jpg">
-    </div>
-
-    <div class="performance-picture">
-      <div class="performance-picture-numbertext">6 / 6</div>
-      <img src="assets/stage/H34A3738.JPG">
-    </div> -->
-
-    <a class="prev-arrow-button" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next-arrow-button" onclick="plusSlides(1)">&#10095;</a>
+    <a class="prev-arrow-button" (click)="plusSlides(-1)">&#10094;</a>
+    <a class="next-arrow-button" (click)="plusSlides(1)">&#10095;</a>
 
   </div>
   <br>
   
   <div class="modal-dialog-dot-navigation">
-    <span class="dot" onclick="currentSlide(1)"></span> 
-    <span class="dot" onclick="currentSlide(2)"></span> 
-    <span class="dot" onclick="currentSlide(3)"></span> 
+    <span class="dot"  *ngFor="let picture of pictures" (click)="currentSlide(pictures.indexOf(picture)+1)"></span> 
+    <!-- <span class="dot" (click)="currentSlide(2)"></span> 
+    <span class="dot" (click)="currentSlide(3)"></span>  -->
   </div>
 </div>
