--- a/tth-client/src/app/sites/stage/gallery/gallery.component.scss
+++ b/tth-client/src/app/sites/stage/gallery/gallery.component.scss
@@ -37,7 +37,7 @@
         width: 90%;
         max-width: 1200px;
 
-        .performance-picture {
+        .performance-picture-frame {
             display: block;
             background-color: black;
 
