:sparkles: Make Courses component dynamic

--- a/tth-client/src/app/sites/courses/courses.component.html
+++ b/tth-client/src/app/sites/courses/courses.component.html
@@ -2,19 +2,8 @@
 <div class="content">
   <h2>Übersicht</h2>
 </div>
-<div class="content">
-  <h2>Preise</h2>
-  Die unten aufgeführten Preise werden monatlich berechnet.
-  <h3>Kinder</h3>
-  <p>Ein Kurs unabhängig der Tanzrichtung: <b>33€</b></p>
-  <p>Zweiter und dritter Kurs unabhängig der Tanzrichtung: jeweils <b>22€</b></p>
-  <p>Ab dem vierten Kurs wird eine Pauschale von <b>80€</b> berechnet.</p>
-  <h3>Jugendliche und Erwachsene</h3>
-  <p>Ein 60-minütiger Kurs unabhängig der Tanzrichtung: <b>37€</b></p>
-  <p>Ein 90-minütiger Kurs unabhängig der Tanzrichtung: <b>45€</b></p>
-  <p>Zweiter und dritter 60-minütiger Kurs unabhängig der Tanzrichtung: jeweils <b>24€</b></p>
-  <p>Zweiter und dritter 90-minütiger Kurs unabhängig der Tanzrichtung: jeweils <b>28€</b></p>
-  <p>Ab dem vierten Kurs wird eine Pauschale von <b>90€</b> berechnet.</p>
+<div class="content" [innerHTML]='text'>
+  
 </div>
 <div class="content">
   <h2>vollständige Stundenpläne</h2>
