--- a/tth-client/src/app/sites/team/team.component.html
+++ b/tth-client/src/app/sites/team/team.component.html
@@ -1,10 +1,10 @@
 <div class="header-image"></div>
 <div class="team-member-content">
-  <div *ngFor="let teacher of team" class="posts">
+  <div *ngFor="let teacher of teachers" class="posts">
     <h2>{{teacher.name}}</h2>
     <p>{{teacher.task}}</p>
     <div class="team-member-content-container">
-      <img src="assets/team/Anita.jpg" class="team-member-picture-frame"/>
+      <img src={{getFileSrc(teacher.image)}} class="team-member-picture-frame"/>
       <div class="team-member-description-container">{{teacher.description}}</div>
     </div>
   </div>
