:sparkles: Make Contact component dynamic

--- a/tth-client/src/app/shared/header/header.component.html
+++ b/tth-client/src/app/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="navbar">
     <div routerLink="/" class="logo"></div>
-    <a href="#contact">Kontakt</a>
+    <a routerLink="/contact">Kontakt</a>
     <a routerLink="/locations">Standorte</a>
     <a routerLink="/team">Team</a>
     <a routerLink="/kurse">Kurse</a>
