:sparkles: Load background images dynamically

--- a/tth-client/src/app/sites/contact/contact.component.html
+++ b/tth-client/src/app/sites/contact/contact.component.html
@@ -1,3 +1,4 @@
+<div class="header-image" [ngStyle]="getBackgroundStyle(backgroundImage)"></div>
 <div class="contact-container" *ngIf='contact'>
   <div class="contact-name">
     {{contact.name}}
