--- a/tth-client/src/app/sites/courses/courses.component.html
+++ b/tth-client/src/app/sites/courses/courses.component.html
@@ -1,4 +1,4 @@
-<div class="header-image"></div>
+<div class="header-image" [ngStyle]="getBackgroundStyle(backgroundImage)"></div>
 <div class="content">
   <h2>Übersicht</h2>
 </div>
