--- a/tth-client/src/app/sites/locations/locations.component.html
+++ b/tth-client/src/app/sites/locations/locations.component.html
@@ -1,4 +1,4 @@
-<div class="header-image"></div>
+<div class="header-image" [ngStyle]="getBackgroundStyle(backgroundImage)"></div>
 <div class="performances-container">
   <div class="posts" *ngIf="locationMG">
     <h2 [innerHTML]='locationMG.name'></h2>
