--- a/tth-client/src/app/sites/team/team.component.html
+++ b/tth-client/src/app/sites/team/team.component.html
@@ -1,4 +1,4 @@
-<div class="header-image"></div>
+<div class="header-image" [ngStyle]="getBackgroundStyle(backgroundImage)"></div>
 <div class="team-member-content">
   <div *ngFor="let teacher of teachers" class="posts">
     <h2>{{teacher.name}}</h2>
