--- a/tth-client/src/app/shared/header/header.component.html
+++ b/tth-client/src/app/shared/header/header.component.html
@@ -1,9 +1,31 @@
 <div class="navbar">
-    <div routerLink="/" class="logo"></div>
-    <a routerLink="/contact">Kontakt</a>
-    <a routerLink="/locations">Standorte</a>
-    <a routerLink="/team">Team</a>
-    <a routerLink="/kurse">Kurse</a>
-    <a routerLink="/buehne">Bühne</a>
-    <a routerLink="/aktuelles">Aktuelles</a>
+    <div routerLink="/" class="logo-container">
+      <div class="logo"></div>
+      <div class="logo-label-container">
+        <div class="logo-label">
+          <span>Tanztheater</span>
+          <span>Anita Hanke</span>
+        </div>
+      </div>
+    </div>
+    <div class="navbar-navigation">
+      <a class="navbar-navigation-link" routerLink="/aktuelles">
+        Aktuelles
+      </a>
+      <a class="navbar-navigation-link" routerLink="/kurse">
+        Kurse
+      </a> 
+      <a class="navbar-navigation-link" routerLink="/buehne">
+        Bühne
+      </a>
+      <a class="navbar-navigation-link" routerLink="/team">
+        Team
+      </a>
+      <a class="navbar-navigation-link" routerLink="/locations">
+        Standorte
+      </a>
+      <a class="navbar-navigation-link" routerLink="/contact">
+        Kontakt
+      </a>
+    </div>
   </div>
