--- a/tth-client/src/app/shared/header/header.component.scss
+++ b/tth-client/src/app/shared/header/header.component.scss
@@ -1,38 +1,66 @@
 @import '../../../variables';
+@import '../../../mixins';
 
 /* The navigation bar */
 .navbar {
+    @include flexbox();
+    height: 70px;
     overflow: hidden;
-    background-color: #303030;
+    background-color: #000000;
     // position: fixed; /* Set the navbar to fixed position */
     top: 0; /* Position the navbar at the top of the page */
     width: 100%; /* Full width */
     z-index: 10;
-    .logo {
-        background-image: url("../../../resources/Logo.png"); //no-repeat;
-        background-size: 100% 100%;
-        height: 100%;
-        float: left;
-        cursor: pointer;
-        height: 40px;
-        width: 20px;
-        margin: 10px 20px;
+    .logo-container {
+        float: left;  
+        margin: 10px 20px; 
+        height: 50px;
+        cursor: pointer; 
+        @include flexbox();
+        &:focus {
+            outline: none;                
+        }       
+        .logo {
+            background-image: url("../../../resources/Logo.png"); //no-repeat;
+            background-size: 100% 100%;
+            display: inline-block;
+            height: 50px;
+            width: 20px;
+        }
+        .logo-label-container {
+            display: inline-block; 
+            width: 120px;           
+            .logo-label {
+                color: $header-link-color; 
+                padding: 5px 0px 5px 10px;  
+                font-size: 16px;
+                text-transform: uppercase;         
+                span {
+                    margin: 0;
+                    display: block;
+                    line-height: 20px;
+                }
+            }
+        }
     }
-    .logo:focus {
-        outline: none;
-    }
-    a {
-        float: right;
-        display: block;
-        color: $header-link-color;
-        text-align: center;
-        padding: 14px 20px;
-        text-decoration: none;
-        font-size: 17px;
-        cursor: pointer;
-    }
-
-    a:hover {
-        background-color: $header-hover-background-color;
+    .navbar-navigation {
+        @include flex(1);  
+        @include flexbox();
+        @include justify-content(flex-end);      
+        .navbar-navigation-link {
+            color: $header-link-color;
+            text-align: center;
+            margin: 25px 20px 20px 20px;
+            text-decoration: none;
+            height: 25px;
+            font-size: 14px;
+            text-transform: uppercase;
+            cursor: pointer;
+            border-bottom: 1px transparent;
+            @include transition(border-bottom 0.3s ease);
+            &:hover {
+               border-bottom: 1px solid #fff;        
+            }
+        }
     }
 }
