--- a/tth-client/src/styles.scss
+++ b/tth-client/src/styles.scss
@@ -7,6 +7,7 @@ body, html {
     margin: 0;
     font: 400 15px/1.8 "Lucida Grande", sans-serif;
     color: #777;
+    background-color: #000;
 }
 
 .header-image {
