--- a/tth-client/src/app/shared/footer/footer.component.scss
+++ b/tth-client/src/app/shared/footer/footer.component.scss
@@ -1,34 +1,53 @@
 @import '../../../variables';
+@import '../../../mixins';
 
-.navbar {
+.footer {
     overflow: hidden;
-    background-color: #303030;
-    // position: fixed; /* Set the navbar to fixed position */
+    background-color: #000000;
     bottom: 0; /* Position the navbar at the top of the page */
     width: 100%; /* Full width */
     z-index: 10;
-
-    .contactContainer {
-        margin: 30px 60px;
-        color: $main-text-color;
-        float: left;
-        
-        .badge {
-            background-image: url("../../../resources/tthbadge.png");
-            background-size: 100% 100%;
-            height: 80px;
-            width: 230px;
+    color: $main-text-color;
+    .footer-section {
+        margin: 30px;
+        text-align: center;
+        .footer-section-heading {
+            font-size: 20px;
+            font-weight: 600;
         }
-
-        p {
-            padding-top: 5px;
-            margin: 0;
+        .footer-section-content {
+            font-size: 14px;
+            .footer-section-content-link {
+                display: block;
+                text-decoration: none;
+                color: $main-text-color;
+            }
+            .footer-section-content-link-inline {
+                display: inline-block;
+            }
+            .footer-section-content-break {
+                height: 15px;
+            }
         }
     }
+}
 
-    .container {
-        margin: 30px 60px;
-        color: $main-text-color;
-        float: right;
+@media (min-width: $media-breakpoint-md) {
+    .footer {
+        @include flexbox();
+        .footer-section {
+            width: 33%;
+            text-align: left;
+        }
+    }
+}
+
+@media (min-width: $media-breakpoint-lg) {
+    .footer {
+        max-width: $media-breakpoint-lg;
+        margin: 0 auto;
+        .footer-section {
+            margin: 50px;
+        }
     }
 }
